# protoc-gen-resource

./: .bazelrc  .bazelversion  .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod
.github/workflows/: go.yaml
cmd/protoc-gen-deepcopy/: main.go
cmd/protoc-gen-resource/: BUILD.bazel  main.go
examples/protos/: BUILD.bazel  enums.proto  imports.go  messages.proto  repeated_enums.proto  repeated_messages.proto  repeated_scalars.proto  simple.proto
examples/tests/: BUILD.bazel  simple_test.go
internal/examples/: BUILD.bazel  Makefile  simple.pb.deepcopy.go  simple.pb.go  simple.proto
internal/examples/testing/: BUILD.bazel  resource_test.go
pkg/deepcopy/: generator.go  generator_test.go
pkg/deepcopy/testdata/etalons/: simple.pb.deepcopy.go.etalone
pkg/deepcopy/testdata/protos/: simple.proto
pkg/generator/: BUILD.bazel  snippet_writer.go
pkg/protoc/: BUILD.bazel  generator.go  parser.go  parser_test.go
pkg/resource/: BUILD.bazel  deepcopy.go  funcs.go  generator.go  generator_test.go  gvk.go  gvk_test.go
pkg/resource/templates/: deepcopy.gotmpl  deepcopy_into.gotmpl  deepcopy_object.gotmpl  gvk.gotmpl  package.gotmpl
pkg/resource/testdata/descriptors/: enums.descriptor  messages.descriptor  optionals.descriptor  repeated_enums.descriptor  repeated_messages.descriptor  repeated_scalars.descriptor  simple.descriptor
pkg/resource/testdata/etalons/: enums.pb.deepcopy.go.etalone  messages.pb.deepcopy.go.etalone  optionals.pb.deepcopy.go.etalone  repeated_enums.pb.deepcopy.go.etalone  repeated_messages.pb.deepcopy.go.etalone  repeated_scalars.pb.deepcopy.go.etalone  simple.pb.deepcopy.go.etalone
pkg/resource/testdata/protos/: BUILD.bazel  optionals.proto  simple.proto  simple.proto_
pkg/templates/: BUILD.bazel  snippet_writer.go
