load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/dgodyna/protoc-gen-resource
gazelle(name = "gazelle")

# rule to update go module dependencies in this project.
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
