load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "protoc-gen-resource_lib",
    srcs = ["main.go"],
    importpath = "github.com/dgodyna/protoc-gen-resource/cmd/protoc-gen-resource",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/protoc",
        "//pkg/resource",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//types/pluginpb:go_default_library",
    ],
)

go_binary(
    name = "protoc-gen-resource",
    embed = [":protoc-gen-resource_lib"],
    visibility = ["//visibility:public"],
)
