load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_go//proto:compiler.bzl", "go_proto_compiler")

go_library(
    name = "protoc-gen-resource_lib",
    srcs = ["main.go"],
    importpath = "github.com/dgodyna/protoc-gen-resource/cmd/protoc-gen-resource",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/protoc",
        "//pkg/resource",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/pluginpb",
    ],
)

go_binary(
    name = "protoc-gen-resource",
    embed = [":protoc-gen-resource_lib"],
    visibility = ["//visibility:public"],
)

# Ref:
#   https://github.com/bazelbuild/rules_go/blob/master/proto/core.rst#go_proto_compiler
go_proto_compiler(
    name = "protoc-gen-resource_compiler",
    plugin = ":protoc-gen-resource",
    valid_archive = True,
    visibility = ["//visibility:public"],
    deps = [
    ],
    suffix = ".deepcopy.pb.go",
)
