load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "examples_proto",
    srcs = ["simple.proto"],
    visibility = ["//:__subpackages__"],
)

go_library(
    name = "examples",
    srcs = ["simple.pb.deepcopy.go"],
    importpath = "github.com/dgodyna/protoc-gen-resource/internal/examples",
    visibility = ["//:__subpackages__"],
    deps = [
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
    ],
)

go_proto_library(
    name = "examples_go_proto",
    importpath = "github.com/dgodyna/protoc-gen-deepcopy/pkg/internal/examples",
    proto = ":examples_proto",
    visibility = ["//:__subpackages__"],
)
