# gazelle:go_proto_compilers@io_bazel_rules_go//proto:go_proto

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "examples_proto",
    srcs = ["simple.proto"],
    visibility = ["//internal/examples:__subpackages__"],
)

go_library(
    name = "examples",
    embed = [":examples_go_proto"],
    importpath = "github.com/dgodyna/protoc-gen-deepcopy/pkg/internal/examples",
    visibility = ["//internal/examples:__subpackages__"],
)

go_proto_library(
    name = "examples_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_proto"],
    importpath = "github.com/dgodyna/protoc-gen-deepcopy/pkg/internal/examples",
    proto = ":examples_proto",
    visibility = ["//internal/examples:__subpackages__"],
)
