load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "protoc",
    srcs = [
        "generator.go",
        "parser.go",
    ],
    importpath = "github.com/dgodyna/protoc-gen-resource/pkg/protoc",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//compiler/protogen",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/descriptorpb",
        "@org_golang_google_protobuf//types/pluginpb",
    ],
)

go_test(
    name = "protoc_test",
    srcs = ["parser_test.go"],
    embed = [":protoc"],
    deps = [
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@tools_gotest//assert",
    ],
)
