load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "resource",
    srcs = [
        "deepcopy.go",
        "generator.go",
        "gvk.go",
    ],
    embedsrcs = [
        "templates/deepcopy.gotmpl",
        "templates/deepcopy_into.gotmpl",
        "templates/deepcopy_object.gotmpl",
        "templates/gvk.gotmpl",
        "templates/package.gotmpl",
    ],
    importpath = "github.com/dgodyna/protoc-gen-resource/pkg/resource",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/generator",
        "@org_golang_google_protobuf//compiler/protogen",
    ],
)

go_test(
    name = "resource_test",
    srcs = [
        "generator_test.go",
        "gvk_test.go",
    ],
    embed = [":resource"],
    data = ["testdata/etalons/simple.pb.deepcopy.go.etalone", "testdata/protos/simple.proto"],
    deps = [
        "//pkg/protoc",
        "@org_golang_google_protobuf//compiler/protogen",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//testing/protocmp",
        "@org_golang_google_protobuf//types/descriptorpb",
        "@org_golang_google_protobuf//types/pluginpb",
        "@tools_gotest//assert",
    ],
)
